--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PickThing</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -12,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="clientApp">
@@ -38,9 +40,9 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a href="#/">Home</a></li>
+              <li><a href="#create">Create</a></li>
+              <li><a href="#join">Join</a></li>
             </ul>
           </div>
         </div>
@@ -48,13 +50,7 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+      <div ng-view></div>
     </div>
 
 
@@ -75,9 +71,16 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+        <script src="../bower_components/angular/angular.js"></script>
+        <script src="../bower_components/angular-route/angular-route.js"></script>
+        <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+        
+        <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="app/scripts/app.js"></script>
+        <script src="app/scripts/controllers/join.js"></script>
+        <script src="app/scripts/controllers/create.js"></script>
+        <script src="app/scripts/controllers/main.js"></script>
+        
         <!-- endbuild -->
 </body>
 </html>
